修改启动文件名