@@ -34,7 +34,7 @@ if [ -z "$JAVA" ]; then
 fi
 
 str=`file -L $JAVA | grep 64-bit`
-JAVA_OPTS="-server -Xms256m -Xmx256m -XX:NewSize=128m -XX:MaxNewSize=128m -XX:MaxPermSize=128m -XX:-UseAdaptiveSizePolicy -XX:MaxTenuringThreshold=15 -XX:+DisableExplicitGC -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDetails -Xloggc:../logs/gc.log"
+JAVA_OPTS="-server -Xms1024m -Xmx1024m -Xmn800m -XX:-UseAdaptiveSizePolicy -XX:MaxTenuringThreshold=15 -XX:+DisableExplicitGC -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDetails -Xloggc:../logs/gc.log"
 
 JAVA_OPTS=" $JAVA_OPTS -Djava.awt.headless=true -Djava.net.preferIPv4Stack=true -Dfile.encoding=UTF-8"
 BASELINE_OPTS="-DappName=datacurator-baseline -Dlogback.configurationFile=$logback_configurationFile"
@@ -52,7 +52,7 @@ then
  	
 	echo LOG CONFIGURATION : $logback_configurationFile
 	echo CLASSPATH :$CLASSPATH
-	$JAVA $JAVA_OPTS $JAVA_DEBUG_OPT $BASELINE_OPTS -classpath .:$CLASSPATH org.luckystar.BootStrap 1>>$base/logs/web.log 2>&1 &
+	$JAVA $JAVA_OPTS $JAVA_DEBUG_OPT $BASELINE_OPTS -classpath .:$CLASSPATH org.luckystar.LightningBootStrap 1>>$base/logs/web.log 2>&1 &
 	echo $! > $base/bin/tomcat.pid
 	
 	echo "cd to $current_path for continue"
